--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -57,9 +57,7 @@ options = [""]
 
 ["岭下展示1"]
 export = true
-options = ["
-
-\f1811年，1月5日，普罗维登斯\n\n亲爱的菲利普，\n我满怀悲痛地告知你，以利亚·文斯考特逝世了，他已经投入了主那慈爱的怀抱之中。我们都知道他这些年来健康状况欠佳，无论是身体还是精神都是如此。由于他已经离开了之前的伙伴们，因此要知道他碰见了什么麻烦可谓难上加难。我曾经前往他居住了数年的乡村住宅拜访他。在那时他正躺在病床上，而且他终于开口给我讲了一个完全出乎我意料的故事。我不确信是否应当把它告诉你，但我知道你最为关心我们的伙伴。\n他告诉我说15年来他一直都在竭尽心力地思考如何继续那让我们赚得盆满钵满的奴隶贸易。可憎的法律让我们的生意不再合法，而那些缠着好约翰·布朗的麻烦也让他心烦意乱。但我还记得，你肯定也一样，以利亚在那个时期在酒馆里说过的那些话。我们都以为那不过是胡思乱想，而且他大概是喝多了。我们在听见他说出我们应该在城镇下挖地道的想法时全都哈哈大笑。但我们全都不知道的是，这个想法一点也不是胡思乱想。我们全都不知道他秘密地制定了这个计划。在以利亚·文斯考特家的地窖中，他找到了一条隧道。这条隧道能够通向河那附近，而且要把它挖得更近一些也并不困难。他可以使用这条通道押送奴隶在城镇中来往。\n一切全都就绪之后，他乐不可支地在家中等待着他的人把他的奴隶带回来。但他们却没能来。他开始疑惑是什么拦住了他们，于是他带着剩下的人走进了地下去看看他们能找到什么。他们在地下找到了遍地的死尸。文斯考特用紧张的声音告诉我一部分人在隧道中就像破布一样被撕扯得到处都是，白人和奴隶都有。他不能确定这个事实，因为他未敢在此停留，但他认为并非所有的男人都被杀死了，他也没有在尸体中找到女奴们的踪影。但那些活着的人被带到了哪里，他们又面临着怎样的命运？地底的阴影如今看起来就像正紧抱着怀中的秘密，不怀好意地注视着他一样。他快速地逃了回来，并快速地在家的下面与河道旁边的隧道里建起了一道牢固的砖墙以便堵住任何从下面来的东西。\n自那以后他就再也未能得以安眠，至少在他还留在那间屋子里的时候是如此。我们都知道在那以后他患了重病并且不再讨论那些反对这条法律的计划。而在他生命的尽头，他终于在病床上谈论起了他曾从城镇下的深渊中逃离的故事。他透过窗户望向了外面摇曳的红枫树，看起来平静了下来。我只能认为这间乡村住宅对于他而言意味着某种生命尽头的平静。愿他的后代能在普罗维登斯的那座房屋中交上比他更好的运气。\n\n诚挚祝愿\n杰克伯·彼希"]
+options = ["\f1811年，1月5日，普罗维登斯\n\n亲爱的菲利普，\n我满怀悲痛地告知你，以利亚·文斯考特逝世了，他已经投入了主那慈爱的怀抱之中。我们都知道他这些年来健康状况欠佳，无论是身体还是精神都是如此。由于他已经离开了之前的伙伴们，因此要知道他碰见了什么麻烦可谓难上加难。我曾经前往他居住了数年的乡村住宅拜访他。在那时他正躺在病床上，而且他终于开口给我讲了一个完全出乎我意料的故事。我不确信是否应当把它告诉你，但我知道你最为关心我们的伙伴。\n他告诉我说15年来他一直都在竭尽心力地思考如何继续那让我们赚得盆满钵满的奴隶贸易。可憎的法律让我们的生意不再合法，而那些缠着好约翰·布朗的麻烦也让他心烦意乱。但我还记得，你肯定也一样，以利亚在那个时期在酒馆里说过的那些话。我们都以为那不过是胡思乱想，而且他大概是喝多了。我们在听见他说出我们应该在城镇下挖地道的想法时全都哈哈大笑。但我们全都不知道的是，这个想法一点也不是胡思乱想。我们全都不知道他秘密地制定了这个计划。在以利亚·文斯考特家的地窖中，他找到了一条隧道。这条隧道能够通向河那附近，而且要把它挖得更近一些也并不困难。他可以使用这条通道押送奴隶在城镇中来往。\n一切全都就绪之后，他乐不可支地在家中等待着他的人把他的奴隶带回来。但他们却没能来。他开始疑惑是什么拦住了他们，于是他带着剩下的人走进了地下去看看他们能找到什么。他们在地下找到了遍地的死尸。文斯考特用紧张的声音告诉我一部分人在隧道中就像破布一样被撕扯得到处都是，白人和奴隶都有。他不能确定这个事实，因为他未敢在此停留，但他认为并非所有的男人都被杀死了，他也没有在尸体中找到女奴们的踪影。但那些活着的人被带到了哪里，他们又面临着怎样的命运？地底的阴影如今看起来就像正紧抱着怀中的秘密，不怀好意地注视着他一样。他快速地逃了回来，并快速地在家的下面与河道旁边的隧道里建起了一道牢固的砖墙以便堵住任何从下面来的东西。\n自那以后他就再也未能得以安眠，至少在他还留在那间屋子里的时候是如此。我们都知道在那以后他患了重病并且不再讨论那些反对这条法律的计划。而在他生命的尽头，他终于在病床上谈论起了他曾从城镇下的深渊中逃离的故事。他透过窗户望向了外面摇曳的红枫树，看起来平静了下来。我只能认为这间乡村住宅对于他而言意味着某种生命尽头的平静。愿他的后代能在普罗维登斯的那座房屋中交上比他更好的运气。\n\n诚挚祝愿\n杰克伯·彼希"]
 
 ["岭下展示2"]
 export = true
