--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -14,7 +14,12 @@ update_Urls = [
 ["phelp"]
 export = true
 visible = true
-options = ["\f小心剧透\n文字版目录可在此查看\nhttps://github.com/errrr-er/alll/blob/main/call_of_cthulhu/README.md"]
+options = ["目录内容有剧透请谨慎查看，图片版为pichelp\n文字版可在此查看\nhttps://github.com/errrr-er/alll/blob/main/call_of_cthulhu/README.md"]
+
+["pichelp"]
+export = true
+visible = true
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/phelp.png?raw=true,type=show]"]
 
 
 # 月光舞鞋
