--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -50,143 +50,143 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 # 幽暗之门·岭下暗影
 ["岭下地图1"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["岭下地图2"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["岭下地图3"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["岭下展示1"]
 export = true
-options = ["\f1811年，1月5日，普罗维登斯\n\n亲爱的菲利普，\n我满怀悲痛地告知你，以利亚·文斯考特逝世了，他已经投入了主那慈爱的怀抱之中。我们都知道他这些年来健康状况欠佳，无论是身体还是精神都是如此。由于他已经离开了之前的伙伴们，因此要知道他碰见了什么麻烦可谓难上加难。我曾经前往他居住了数年的乡村住宅拜访他。在那时他正躺在病床上，而且他终于开口给我讲了一个完全出乎我意料的故事。我不确信是否应当把它告诉你，但我知道你最为关心我们的伙伴。\n他告诉我说15年来他一直都在竭尽心力地思考如何继续那让我们赚得盆满钵满的奴隶贸易。可憎的法律让我们的生意不再合法，而那些缠着好约翰·布朗的麻烦也让他心烦意乱。但我还记得，你肯定也一样，以利亚在那个时期在酒馆里说过的那些话。我们都以为那不过是胡思乱想，而且他大概是喝多了。我们在听见他说出我们应该在城镇下挖地道的想法时全都哈哈大笑。但我们全都不知道的是，这个想法一点也不是胡思乱想。我们全都不知道他秘密地制定了这个计划。在以利亚·文斯考特家的地窖中，他找到了一条隧道。这条隧道能够通向河那附近，而且要把它挖得更近一些也并不困难。他可以使用这条通道押送奴隶在城镇中来往。\n一切全都就绪之后，他乐不可支地在家中等待着他的人把他的奴隶带回来。但他们却没能来。他开始疑惑是什么拦住了他们，于是他带着剩下的人走进了地下去看看他们能找到什么。他们在地下找到了遍地的死尸。文斯考特用紧张的声音告诉我一部分人在隧道中就像破布一样被撕扯得到处都是，白人和奴隶都有。他不能确定这个事实，因为他未敢在此停留，但他认为并非所有的男人都被杀死了，他也没有在尸体中找到女奴们的踪影。但那些活着的人被带到了哪里，他们又面临着怎样的命运？地底的阴影如今看起来就像正紧抱着怀中的秘密，不怀好意地注视着他一样。他快速地逃了回来，并快速地在家的下面与河道旁边的隧道里建起了一道牢固的砖墙以便堵住任何从下面来的东西。\n自那以后他就再也未能得以安眠，至少在他还留在那间屋子里的时候是如此。我们都知道在那以后他患了重病并且不再讨论那些反对这条法律的计划。而在他生命的尽头，他终于在病床上谈论起了他曾从城镇下的深渊中逃离的故事。他透过窗户望向了外面摇曳的红枫树，看起来平静了下来。我只能认为这间乡村住宅对于他而言意味着某种生命尽头的平静。愿他的后代能在普罗维登斯的那座房屋中交上比他更好的运气。\n\n诚挚祝愿\n杰克伯·彼希"]
+options = ["[CQ:image,file=换,type=show]\f1811年，1月5日，普罗维登斯\n\n亲爱的菲利普，\n我满怀悲痛地告知你，以利亚·文斯考特逝世了，他已经投入了主那慈爱的怀抱之中。我们都知道他这些年来健康状况欠佳，无论是身体还是精神都是如此。由于他已经离开了之前的伙伴们，因此要知道他碰见了什么麻烦可谓难上加难。我曾经前往他居住了数年的乡村住宅拜访他。在那时他正躺在病床上，而且他终于开口给我讲了一个完全出乎我意料的故事。我不确信是否应当把它告诉你，但我知道你最为关心我们的伙伴。\n他告诉我说15年来他一直都在竭尽心力地思考如何继续那让我们赚得盆满钵满的奴隶贸易。可憎的法律让我们的生意不再合法，而那些缠着好约翰·布朗的麻烦也让他心烦意乱。但我还记得，你肯定也一样，以利亚在那个时期在酒馆里说过的那些话。我们都以为那不过是胡思乱想，而且他大概是喝多了。我们在听见他说出我们应该在城镇下挖地道的想法时全都哈哈大笑。但我们全都不知道的是，这个想法一点也不是胡思乱想。我们全都不知道他秘密地制定了这个计划。在以利亚·文斯考特家的地窖中，他找到了一条隧道。这条隧道能够通向河那附近，而且要把它挖得更近一些也并不困难。他可以使用这条通道押送奴隶在城镇中来往。\n一切全都就绪之后，他乐不可支地在家中等待着他的人把他的奴隶带回来。但他们却没能来。他开始疑惑是什么拦住了他们，于是他带着剩下的人走进了地下去看看他们能找到什么。他们在地下找到了遍地的死尸。文斯考特用紧张的声音告诉我一部分人在隧道中就像破布一样被撕扯得到处都是，白人和奴隶都有。他不能确定这个事实，因为他未敢在此停留，但他认为并非所有的男人都被杀死了，他也没有在尸体中找到女奴们的踪影。但那些活着的人被带到了哪里，他们又面临着怎样的命运？地底的阴影如今看起来就像正紧抱着怀中的秘密，不怀好意地注视着他一样。他快速地逃了回来，并快速地在家的下面与河道旁边的隧道里建起了一道牢固的砖墙以便堵住任何从下面来的东西。\n自那以后他就再也未能得以安眠，至少在他还留在那间屋子里的时候是如此。我们都知道在那以后他患了重病并且不再讨论那些反对这条法律的计划。而在他生命的尽头，他终于在病床上谈论起了他曾从城镇下的深渊中逃离的故事。他透过窗户望向了外面摇曳的红枫树，看起来平静了下来。我只能认为这间乡村住宅对于他而言意味着某种生命尽头的平静。愿他的后代能在普罗维登斯的那座房屋中交上比他更好的运气。\n\n诚挚祝愿\n杰克伯·彼希"]
 
 ["岭下展示2"]
 export = true
-options = ["\f但愿有人能在某天读到这些遗言，上帝保佑。我，约翰·哈珀，在此写下这些话用以记述我和我弟兄们悲惨的故事。文斯考特的聪明计划让我们全都玩完了。他觉得用他找到的隧道能避开罗德岛州政府的注意。但他该好好想想这些隧道一开始是用来干什么的。\n他说自己很幸运，但我们可是倒了大霉。当我们押送着他的货穿过隧道的时候，怪物袭击了我们，那些运气好的死在了它们的爪子和牙齿之下。而剩下的被抓到了这来。圣经和布道者告诉我们说上帝诅咒了蛇，让它们永世只得爬行。那为什么我们的新主人仍然能够用双脚行走？他和他的族人是怎么逃脱上帝的惩戒的？难道它们在惩戒来临的时候在此冬眠所以躲过了上帝的注意？现在我们侍奉着这只可憎的蛇。他强迫我们所有人为他工作。他强迫我们彼此交媾，就好像我们不过是牲口一样。我看着我的同伴们要么死去，要么日渐消瘦，还有的人被那只蛇折磨用以取乐。我们已经远离了上帝慈爱的视线。"]
+options = ["[CQ:image,file=换,type=show]\f但愿有人能在某天读到这些遗言，上帝保佑。我，约翰·哈珀，在此写下这些话用以记述我和我弟兄们悲惨的故事。文斯考特的聪明计划让我们全都玩完了。他觉得用他找到的隧道能避开罗德岛州政府的注意。但他该好好想想这些隧道一开始是用来干什么的。\n他说自己很幸运，但我们可是倒了大霉。当我们押送着他的货穿过隧道的时候，怪物袭击了我们，那些运气好的死在了它们的爪子和牙齿之下。而剩下的被抓到了这来。圣经和布道者告诉我们说上帝诅咒了蛇，让它们永世只得爬行。那为什么我们的新主人仍然能够用双脚行走？他和他的族人是怎么逃脱上帝的惩戒的？难道它们在惩戒来临的时候在此冬眠所以躲过了上帝的注意？现在我们侍奉着这只可憎的蛇。他强迫我们所有人为他工作。他强迫我们彼此交媾，就好像我们不过是牲口一样。我看着我的同伴们要么死去，要么日渐消瘦，还有的人被那只蛇折磨用以取乐。我们已经远离了上帝慈爱的视线。"]
 
 ["岭下房屋"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["岭下文献馆"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["岭下音乐室"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["岭下茧房"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 # 幽暗之门·哈索恩山
 ["哈索地图1"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["哈索地图2"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["哈索展示1"]
 export = true
-options = ["\f亲爱的，\n如你所见，在上一次尝试深入调查超自然现象后，我最近让自己来到位于丹弗斯的疗养院做一次精神上的恢复。但事实证明选择丹弗斯是一个十分糟糕的错误，这对我的身心都有着巨大的危险。在此地有一处“异常”，而他们不会让我离开的。而由于他们会检查通信所以我只能偷偷将这张纸条送出来给你。\n请前来将我从这个恐怖的地方解救出来，务必带上同伴而非独自前来。\n你的朋友\n拉里·克罗斯韦尔"]
+options = ["[CQ:image,file=换,type=show]\f亲爱的，\n如你所见，在上一次尝试深入调查超自然现象后，我最近让自己来到位于丹弗斯的疗养院做一次精神上的恢复。但事实证明选择丹弗斯是一个十分糟糕的错误，这对我的身心都有着巨大的危险。在此地有一处“异常”，而他们不会让我离开的。而由于他们会检查通信所以我只能偷偷将这张纸条送出来给你。\n请前来将我从这个恐怖的地方解救出来，务必带上同伴而非独自前来。\n你的朋友\n拉里·克罗斯韦尔"]
 
 ["哈索展示2"]
 export = true
-options = ["\f丹弗斯州立医院\n450MapleST·Danvers,MA\n———————————\n亲爱的,\n请忽视我之前的信息。\n我当时正焦虑不安。\n这里一切都好，不用劳烦前来。\n我需要好好休息和咨询。\n万分感谢。\n\n你真诚的，\n劳伦斯·克罗斯韦尔\n"]
+options = ["[CQ:image,file=换,type=show]\f丹弗斯州立医院\n450MapleST·Danvers,MA\n———————————\n亲爱的,\n请忽视我之前的信息。\n我当时正焦虑不安。\n这里一切都好，不用劳烦前来。\n我需要好好休息和咨询。\n万分感谢。\n\n你真诚的，\n劳伦斯·克罗斯韦尔\n"]
 
 ["哈索展示3"]
 export = true
-options = ["\f丹弗斯疗养院主管为患者建立环形露天剧场\n\n丹弗斯州立疗养院的工人们于今日动工建立一处供病人们娱乐的小型环形露天剧场。当地居民同时也可以在这个邻近疗养院蓄水池，如田园牧歌般的地方获得一处安静的谈话空间、诗歌朗诵以及音乐表演的净土。\n疗养院的住户，同时也是工头的安德鲁·麦克布莱德（AndrewMacBride），补充说他的团队在打碎并移除一块在山坡上剧场建址处，有着疑似艺术标志的大型花岗岩板的时候遇到了一些困难。疗养院的前主管，威廉·夏恩将这块石板放在了哈索恩山的山坡上。据说，夏恩医生，这位漫游世界的旅行者，相信这块花岗岩板会是疗养院好运的象征。\n当地的居民向为精神病人建立一处剧场的开支提出了质疑。然而，伯格医生坚持建立剧场，他解释说：“重要的是，我们必须牢记应该为所有的居民们谋求福祉，尤其是那些被认为过于脆弱或是那些不能成为更大世界潮流一部分而受到伤害的人们。"]
+options = ["[CQ:image,file=换,type=show]\f丹弗斯疗养院主管为患者建立环形露天剧场\n\n丹弗斯州立疗养院的工人们于今日动工建立一处供病人们娱乐的小型环形露天剧场。当地居民同时也可以在这个邻近疗养院蓄水池，如田园牧歌般的地方获得一处安静的谈话空间、诗歌朗诵以及音乐表演的净土。\n疗养院的住户，同时也是工头的安德鲁·麦克布莱德（AndrewMacBride），补充说他的团队在打碎并移除一块在山坡上剧场建址处，有着疑似艺术标志的大型花岗岩板的时候遇到了一些困难。疗养院的前主管，威廉·夏恩将这块石板放在了哈索恩山的山坡上。据说，夏恩医生，这位漫游世界的旅行者，相信这块花岗岩板会是疗养院好运的象征。\n当地的居民向为精神病人建立一处剧场的开支提出了质疑。然而，伯格医生坚持建立剧场，他解释说：“重要的是，我们必须牢记应该为所有的居民们谋求福祉，尤其是那些被认为过于脆弱或是那些不能成为更大世界潮流一部分而受到伤害的人们。"]
 
 ["哈索展示4"]
 export = true
-options = ["\f夏恩从丹弗斯疗养院退休\n\n塞勒姆当地的威廉·夏恩医生，丹弗斯州立疗养院的老主管，在他25年的无私奉献后迎来了退休。他的博学，宽厚待人以及卓有成效的治疗广为人知。他致力于改善病人生活治疗条件的事迹也广被赞颂。在1890年他到来之前，疗养院背负着恶名，职员们死气沉沉，病人的事故发生率和死亡率在本国中居高不下。\n夏恩主管突然出现并成功地掌控了同样这令人惊异的制度。老读者们可能会想起这位任期不到一年的主管用纳税人的钱在水库边上放置一块雕刻过的大理石板时所招致的抱怨。但就和现在一样，夏恩医生坚持即使主管离任时也让那块装饰用的石板放在那儿不受打扰。不管他那些奇怪的癖好，夏恩医生用他那漫长的任期让疗养院起死回生并获得成功的能力与事迹将长久流传。\n身为早年游历过许多海外地区的人，夏恩博士声明他现在只盼望在他的家乡塞勒姆度过安详的退休生活。博士已经确定会将他私人和官方的文档捐赠给塞勒姆医院。\n对于他的继任者詹姆斯·伯格医生，夏恩博士有着极高的评价：“伯格医生毫无疑问将会成为这些可怜人真诚的庇护者，同时他无疑也将会妥善管理疗养院。”夏恩补充道：“我衷心希望伯格医生能够抛去过去的一些习惯，并专注于建设疗养院光辉的明天。”\n本报衷心祝愿夏恩博士能有一个安详快乐的退休生活。"]
+options = ["[CQ:image,file=换,type=show]\f夏恩从丹弗斯疗养院退休\n\n塞勒姆当地的威廉·夏恩医生，丹弗斯州立疗养院的老主管，在他25年的无私奉献后迎来了退休。他的博学，宽厚待人以及卓有成效的治疗广为人知。他致力于改善病人生活治疗条件的事迹也广被赞颂。在1890年他到来之前，疗养院背负着恶名，职员们死气沉沉，病人的事故发生率和死亡率在本国中居高不下。\n夏恩主管突然出现并成功地掌控了同样这令人惊异的制度。老读者们可能会想起这位任期不到一年的主管用纳税人的钱在水库边上放置一块雕刻过的大理石板时所招致的抱怨。但就和现在一样，夏恩医生坚持即使主管离任时也让那块装饰用的石板放在那儿不受打扰。不管他那些奇怪的癖好，夏恩医生用他那漫长的任期让疗养院起死回生并获得成功的能力与事迹将长久流传。\n身为早年游历过许多海外地区的人，夏恩博士声明他现在只盼望在他的家乡塞勒姆度过安详的退休生活。博士已经确定会将他私人和官方的文档捐赠给塞勒姆医院。\n对于他的继任者詹姆斯·伯格医生，夏恩博士有着极高的评价：“伯格医生毫无疑问将会成为这些可怜人真诚的庇护者，同时他无疑也将会妥善管理疗养院。”夏恩补充道：“我衷心希望伯格医生能够抛去过去的一些习惯，并专注于建设疗养院光辉的明天。”\n本报衷心祝愿夏恩博士能有一个安详快乐的退休生活。"]
 
 ["哈索展示5-1"]
 export = true
-options = [""]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["哈索展示5-2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示5-2.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["哈索展示6"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示6.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 # 幽暗之门·湖之仆从
 ["仆从地图1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从地图1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["仆从地图2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从地图2.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["仆从展示1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["仆从展示2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示2.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["仆从展示3"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示3.png]\f[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示3-1.png]"]
+options = ["[CQ:image,file=换,type=show]\f 3-1 3-2也要"]
 
 # 幽暗之门·血浓于水
 ["血浓地图1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓地图1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓地图2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓地图2.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示2.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示3-1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示3-1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示3-2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示3-2.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示4"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示4.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示5"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示5.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["血浓展示6"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/血浓于水/血浓展示6.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 # 幽暗之门·了却幻梦
 ["幻梦地图1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/了却幻梦/幻梦地图1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 ["幻梦展示1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/了却幻梦/幻梦展示1.png]"]
+options = ["[CQ:image,file=换,type=show]"]
 
 
 # 你就刚刚好
@@ -198,4 +198,4 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 #夏洛克·福尔摩斯症候群
 ["福尔摩斯事前公开"]
 export = true
-options = ["[图:./_pic.deck/pic/福尔摩斯/福1.png]\f[图:./_pic.deck/pic/福尔摩斯/福2.png]\f[图:./_pic.deck/pic/福尔摩斯/福3.png]\f[图:./_pic.deck/pic/福尔摩斯/福4.png]"]
+options = ["[CQ:image,file=换,type=show] 4张"]
