--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -95,7 +95,7 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 
 ["哈索展示1"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA1.png?raw=true,type=show]\f亲爱的，\n如你所见，在上一次尝试深入调查超自然现象后，我最近让自己来到位于丹弗斯的疗养院做一次精神上的恢复。但事实证明选择丹弗斯是一个十分糟糕的错误，这对我的身心都有着巨大的危险。在此地有一处“异常”，而他们不会让我离开的。而由于他们会检查通信所以我只能偷偷将这张纸条送出来给你。\n请前来将我从这个恐怖的地方解救出来，务必带上同伴而非独自前来。\n你的朋友\n拉里·克罗斯韦尔"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA1.png?raw=true,type=show]\f亲爱的，\n如你所见，在上一次尝试深入调查超自然现象后，我最近让自己来到位于丹弗斯的疗养院做一次精神上的恢复。但事实证明选择丹弗斯是一个十分糟糕的错误，这对我的身心都有着巨大的危险。在此地有一处“异常”，而他们不会让我离开的。而由于他们会检查通信所以我只能偷偷将这张纸条送出来给你。\n请前来将我从这个恐怖的地方解救出来，务必带上同伴而非独自前来。\n\n你的朋友\n拉里·克罗斯韦尔"]
 
 ["哈索展示2"]
 export = true
@@ -111,11 +111,11 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 
 ["哈索展示5"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA5-1.png?raw=true,type=show]\f[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA5-2.png?raw=true,type=show]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA5-1.png?raw=true,type=show]\f[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA5-2.png?raw=true,type=show]\f1890年6月2日\n困扰着疗养院的麻烦越来越深了，而我尊敬的同事们永远不会接受这一理论作为理性有序宇宙的一部分。事实上，如果我将我的判断与我的同伴交流的话，我将发现我会被作为一个病人而不是一个管理者。然而我已经在之前的旅行中经历过这样的问题，因而我必须尽快行动。那个东西已经察觉到了我对它的怀疑并开始阻挠我的行动。万幸的是我已经启动了我很久以前在一个古怪的古老城市习得的保护性咒语，目前为止我还是安全的。我必须尽快找到哈索恩的石板并控制住那个折磨着这里一切，扭曲着受创的脆弱心智的东西。哈索恩将石板移走并认为它是异教魂灵崇拜的符号，这位狂热的牧师犯下了这样无比可怕的错误。上帝保佑我能找到石板，而在那之后它就能镇压住那个在哈索恩山上敌视我们的东西。\f1890年11月12日\n我找到了哈索恩的石板，正如我推测的那样，这是一个上古流传下来用以防范那些潜藏于大地和空气之中东西的的古老印记。值得庆幸的是石板熬过了的漫长年月的侵蚀，并被人所忽略。刻于其上的印记犹如刚刚放置那天一样清晰，但这是谁干的？我最好不要过度深究这已随风而去的秘密。现在我的任务是将石板再度安置在山上，来囚禁住那些和它一样对我们所继承的世界抱有敌意的同族们。\f1890年12月3日\n都结束了，印记已经被安置在那片土地上，那个东西则被逼入了不适的长眠。纳税人们质疑花费资金在疗养院放置这样一个“无用装饰品”的必要性，但他们没有表现强烈的想要把它移走的威胁，也大概不明白它的真实目的。但对知情者来说，这个印记现在和将来都应该是一个牢房。我已经看到了病人们和职员们康复的迹象，就好像他们正从一场漫长的清醒噩梦中逐渐苏醒。\f1915年5月7日\n我和我的继任者詹姆斯·伯格医生见面了，他看起来是个乐观能干的年轻后辈。因为他积极的个性，我已经告诫了这位年轻的医生永远不要移走在山上蓄水库旁的那块石板。他会听从我的建议么？对他说明许多年前放置这块石板的真实原因是不可能的，因而我必须编造一个感情真挚的理由来对他强调别动石板的重要性。我祈祷他会牢记他不让石板被移动的承诺。"]
 
 ["哈索展示6"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA6.png?raw=true,type=show]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E5%93%88%E7%B4%A2%E6%81%A9%E5%B1%B1/%E5%93%88%E7%B4%A2%E5%B1%95%E7%A4%BA6.png?raw=true,type=show]\f丹弗斯医院突发死亡事件\n\n近日丹弗斯医院爆出病人安德鲁·麦克布莱德的死讯，享年未知。麦克布莱德今早在他的房间中被发现全无反应。詹姆斯·伯格宣布死因为自杀：“发生这种事真是一个悲剧”，他这样说道，“我们无法妥善安置所有向我们寻求帮助的灵魂。他现在已经去了一个更好的地方”麦克布莱德在这里没有任何已知的亲属。"]
 
 # 幽暗之门·湖之仆从
 ["仆从地图1"]
@@ -128,11 +128,11 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 
 ["仆从展示1"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E6%B9%96%E4%B9%8B%E4%BB%86%E4%BB%8E/%E4%BB%86%E4%BB%8E%E5%B1%95%E7%A4%BA1.png?raw=true,type=show]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E6%B9%96%E4%B9%8B%E4%BB%86%E4%BB%8E/%E4%BB%86%E4%BB%8E%E5%B1%95%E7%A4%BA1.png?raw=true,type=show]\f新英格兰本地历史-78页\n\n……在佛蒙特州、新罕布什尔州和马萨诸塞州的康涅狄格河谷地区曾居住着一个名为阿贝内基人的部族。\n最初是阿贝内基人占据了斯夸特湖一带的地区，不过在1722年，他们被英国殖民者所赶走。因为湖的周围常年盘踞着大量的乌鸦在此觅食，阿贝内基人最初将这片湖命名为“Ponki-mkazas”（乌鸦），而在殖民者获得这片地区之后，他们发现这里无论是发展狩猎还是渔业都不太适合。而且，湖周围的铁杉树完全无法用于烧火，他们用未经加工的木头搭起的房屋也迅速地开始倾塌。殖民者们决定继续向北，将他们聚居地的废墟留在了湖边，数年间，这些老旧的窝棚先后成为了流浪汉、脱逃的黑奴以及逃兵的家，直到1805年，一场洪水将这些建筑彻底荡平，卷入了湖中。居住在本地的人开始称这个湖为斯夸特湖，直至今日。"]
 
 ["仆从展示2"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E6%B9%96%E4%B9%8B%E4%BB%86%E4%BB%8E/%E4%BB%86%E4%BB%8E%E5%B1%95%E7%A4%BA2.png?raw=true,type=show]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E6%B9%96%E4%B9%8B%E4%BB%86%E4%BB%8E/%E4%BB%86%E4%BB%8E%E5%B1%95%E7%A4%BA2.png?raw=true,type=show]\f在跟老爸吵了一架之后，我真的感觉很累，而这鬼地方也一点没能让我的心情变好。车子依旧还坏着——那个叫威廉的老头说他能修好，但我不知道该不该信他。只呆了一个晚上，这地方就已经让我感到浑身鸡皮疙瘩了。我讨厌湖边传来的讨厌的青蛙叫声，在出去晃悠的时候还看到湖上有灯光，难道晚上还有人在那儿钓鱼？的确是有三艘船系在湖边的码头上，但我无法想象那对老迈年高的兄弟半夜会跑到湖边去做什么。不管怎样，那个湖绝对是臭的可以。昨天晚上发生的事情也是绝了，我居然会梦游！记得自打我长大成人之后，就再也没梦游过了。昨晚我梦见自己漂浮在水中，在一座充满了死尸的奇怪城市中央。当我半夜从梦里醒过来的时候，却发现自己已经不再房间里了，而是站在外面的冷风中，那时我还能看到前台的那盏灯在不停闪烁着。那两个老家伙够奇怪的了，幸亏我不常见到他们，他们把大部分的时间都花在他们那个冲着湖那边的，所谓的工作室里了。\n干他娘，如果车今天修不好的话，我就得碰碰运气，搭个车去金斯波特了。"]
 
 ["仆从展示3"]
 export = true
@@ -149,11 +149,11 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 
 ["血浓展示1"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E8%A1%80%E6%B5%93%E4%BA%8E%E6%B0%B4/%E8%A1%80%E6%B5%93%E5%B1%95%E7%A4%BA1.png?raw=true,type=show]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E8%A1%80%E6%B5%93%E4%BA%8E%E6%B0%B4/%E8%A1%80%E6%B5%93%E5%B1%95%E7%A4%BA1.png?raw=true,type=show]\f亲爱的玛丽，\n我知道你甚至可能都不认识我，可我却了解你。你看，我在你家工作。我并不是一位配得上你的绅士，但我的确是个勤奋工作，古道热肠的好人。\n或许你会觉得这有些突然，但我却已经默默留意你很久了。那次你来工地的时候，我一眼就注意到你了，我好想能再见你一面。我有一份礼物给你，明天就带到你学校宿舍那儿。就在你家建花园的地方，我找到了一块宝石。它真的很漂亮，像是一块巨大的梦幻珍珠。鉴于你在密大读书，我想你肯定会对它感兴趣。\n今晚明天我都会在博登阿姆斯酒店自己的房间里，所以你可以到我这儿来。\n致以最深的爱意，\n\n阿尔弗雷德·哈克特"]
 
 ["血浓展示2"]
 export = true
-options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E8%A1%80%E6%B5%93%E4%BA%8E%E6%B0%B4/%E8%A1%80%E6%B5%93%E5%B1%95%E7%A4%BA2.png?raw=true,type=show]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E5%B9%BD%E6%9A%97%E4%B9%8B%E9%97%A8/%E8%A1%80%E6%B5%93%E4%BA%8E%E6%B0%B4/%E8%A1%80%E6%B5%93%E5%B1%95%E7%A4%BA2.png?raw=true,type=show]\f玛丽，\n我觉得这是……这是一枚蛋，但我不清楚它是什么种生的。\n快点来！我不知道它孵化后，我该做点什么。\n\n阿尔弗雷德"]
 
 ["血浓展示3"]
 export = true
