--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -1,7 +1,7 @@
 [meta]
 title = "模组资料(图片)"
 author = "3987681449"
-version = "1.0.0"
+version = "1.0.1"
 license = "CC-BY-NC-SA 4.0"
 date = 2025-04-08
 update_date = 2025-04-08
@@ -40,6 +40,16 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 ["釜村一家"]
 export = true
 options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E6%9C%9B%E5%90%9B%E9%95%BF%E7%95%99/%E9%87%9C%E6%9D%91%E4%B8%80%E5%AE%B6.png?raw=true,type=show]"]
+
+
+# 活神之手
+["活神禁书"]
+export = true
+options = ["——\n\n《新英格兰乐土上的奇书异事》\n\n第四章·阿卡姆的巫师审判：\n\n……但是，即使是在那个巫术邪恶面目众人皆知的时代，也有人借着神圣审判的名义指控曾与自己产生龃龉之人。\n\n其中一个例子就是埃泽基尔·菲尔普斯一案。\n\n埃泽基尔品行端正，居住在阿卡姆以西远离城镇的位置。众所周知，埃泽基尔与其邻居卢卡斯·布莱克曾因土地边界问题发生争执。1695 年秋，布莱克先生和他的两个儿子在库珀法官面前讲述了一个“有趣”的故事。父子三人在普多克之林漫步时看到邻居菲尔普斯正在一片林间空地中与什么无形的事物交谈。三人决定伸张正义（至少三人声称如此），冲上去杀死了不幸的菲尔普斯，并将他就地埋葬。\n\n在这之后，他们来到库珀法官面前坦白了一切，似乎对此问心无愧。\n\n正直的库珀法官不愿意相信他们的供词，因为他知道菲尔普斯和布莱克之间的争执，也记得菲尔普斯曾多次上诉指控布莱克非法侵入自己的土地进行狩猎。库珀法官听取布莱克父子的声明后要求他们第二天返回法庭。但是，布莱克一家在当晚带上全部家产潜逃，登上了一艘前往英国的船，从而逃避了当局的制裁。\n\n——\n\n书中还附上了埃泽基尔·菲尔普斯居住的具体地址。"]
+
+["活神笔记"]
+export = true
+options = ["——\n\n……曾尝试着与伊尔-纳恩兹的恶魔交谈，他们建议我去询问那位不可言说者……\n\n……那时，湖中的游泳者们正在嬉戏，在那种时候，注视着祂是不明智的……\n\n……密斯卡特部落的萨满告诉我，他是黄印的守护者，当神圣的印记落入凡俗之手时，他就会现身……\n\n……黄印可能会赐予向不可言说者作出诺言之人以最强大的力量……\n\n……守护者只会追随两件事物，即被亵渎的印记和亵渎者本人，但亵渎者身体的一部分就足以满足守护者的渴望……\n\n……今晚，我将前往前去谒见我的主人。布莱克总是在窥探我的举动，但他的行为应该不会造成什么影响……\n\n——"]
 
 
 # 幽暗之门·预设卡
