--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -1,7 +1,7 @@
 [meta]
 title = "模组资料(图片)"
 author = "3987681449"
-version = "1.1.1"
+version = "1.1.2"
 license = "CC-BY-NC-SA 4.0"
 date = 2025-04-08
 update_date = 2025-04-09
@@ -36,7 +36,7 @@ options = ["关键词：爱良/釜村徹/釜村一家"]
 ["活神之手"]
 export = true
 visible = true
-options = ["关键词：活神禁书/活神笔记"]
+options = ["关键词：活神禁书/活神林1/活神林2/活神笔记"]
 
 ["幽暗之门"]
 export = true
@@ -78,6 +78,14 @@ options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_ct
 ["活神禁书"]
 export = true
 options = ["——\n\n《新英格兰乐土上的奇书异事》\n\n第四章·阿卡姆的巫师审判：\n\n……但是，即使是在那个巫术邪恶面目众人皆知的时代，也有人借着神圣审判的名义指控曾与自己产生龃龉之人。\n\n其中一个例子就是埃泽基尔·菲尔普斯一案。\n\n埃泽基尔品行端正，居住在阿卡姆以西远离城镇的位置。众所周知，埃泽基尔与其邻居卢卡斯·布莱克曾因土地边界问题发生争执。1695 年秋，布莱克先生和他的两个儿子在库珀法官面前讲述了一个“有趣”的故事。父子三人在普多克之林漫步时看到邻居菲尔普斯正在一片林间空地中与什么无形的事物交谈。三人决定伸张正义（至少三人声称如此），冲上去杀死了不幸的菲尔普斯，并将他就地埋葬。\n\n在这之后，他们来到库珀法官面前坦白了一切，似乎对此问心无愧。\n\n正直的库珀法官不愿意相信他们的供词，因为他知道菲尔普斯和布莱克之间的争执，也记得菲尔普斯曾多次上诉指控布莱克非法侵入自己的土地进行狩猎。库珀法官听取布莱克父子的声明后要求他们第二天返回法庭。但是，布莱克一家在当晚带上全部家产潜逃，登上了一艘前往英国的船，从而逃避了当局的制裁。\n\n——\n\n书中还附上了埃泽基尔·菲尔普斯居住的具体地址。"]
+
+["活神林1"]
+export = true
+options = ["你沿着小路走了大约十多分钟才看到一个隐蔽的入口。\n\n进入林中之后，头顶的树干遮天蔽日，伴随着落日西沉，阻挡了大部分光线。\n\n脚下厚厚的松针消去脚步声，树林深处偶尔能听到沙哑的鸟叫声。"]
+
+["活神林2"]
+export = true
+options = ["不知走了多久，你来到一小块空地旁。\n\n空地被矮小的杂草覆盖，掺杂着片片裸露的土地和石块。\n\n在另一侧的空地上，巨石旁有一块被固定住的蓝色防水布。"]
 
 ["活神笔记"]
 export = true
