--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -93,7 +93,7 @@ options = ["防水布的下面躺着一具骷髅，ta的身上还穿着尚未腐
 
 ["活神笔记"]
 export = true
-options = ["——\n\n……曾尝试着与伊尔-纳恩兹的恶魔交谈，他们建议我去询问那位不可言说者……\n\n……那时，湖中的游泳者们正在嬉戏，在那种时候，注视着祂是不明智的……\n\n……密斯卡特部落的萨满告诉我，他是黄印的守护者，当神圣的印记落入凡俗之手时，他就会现身……\n\n……黄印可能会赐予向不可言说者作出诺言之人以最强大的力量……\n\n……守护者只会追随两件事物，即被亵渎的印记和亵渎者本人，但亵渎者身体的一部分就足以满足守护者的渴望……\n\n……今晚，我将前往前去谒见我的主人。布莱克总是在窥探我的举动，但他的行为应该不会造成什么影响……\n\n——"]
+options = ["那是一些来看像是日记的内容。\n\n——\n\n……曾尝试着与伊尔-纳恩兹的恶魔交谈，他们建议我去询问那位不可言说者……\n\n……那时，湖中的游泳者们正在嬉戏，在那种时候，注视着祂是不明智的……\n\n……密斯卡特部落的萨满告诉我，他是黄印的守护者，当神圣的印记落入凡俗之手时，他就会现身……\n\n……黄印可能会赐予向不可言说者作出诺言之人以最强大的力量……\n\n……守护者只会追随两件事物，即被亵渎的印记和亵渎者本人，但亵渎者身体的一部分就足以满足守护者的渴望……\n\n……今晚，我将前往前去谒见我的主人。布莱克总是在窥探我的举动，但他的行为应该不会造成什么影响……\n\n——"]
 
 # 幽暗之门·预设卡
 ["幽暗预设"]
